# chimera

./: .gitignore  CLAUDE.md  NORTH_STAR.md  README.md  SESSION-HANDOFF.md  khimaira-profile.community.yaml  pyproject.toml
.github/workflows/: bootstrap.yml  test.yml  wheel.yml
apps/monitor-ui/: index.html  vite.config.js  vite.config.ts
apps/monitor-ui/src/: App.tsx  api.ts
apps/monitor-ui/src/lib/: staleness.ts  theme.ts
apps/monitor-ui/src/styles/: globals.css
docs/: INBOX-AND-HANDOFFS.md  INSTALL.md  PROTOCOL.md  khimaira-chat.md
scripts/hooks/: session_start.py  user_prompt_submit.py
scripts/watchers/: README.md  khimaira-role-reminder-broadcast.sh  khimaira-role-reminder.service  khimaira-role-reminder.timer
shared/transport/: README.md
shared/types/: README.md
shared/types/src/chimera_types/: __init__.py  classification.py  context.py  routing.py  runtime.py  usage.py
tasks/: BUILD-PLAN.md
tasks/agent-fanout/: IMPLEMENTATION.md
tasks/agent-sdk-spike/: MEMO.md
tasks/bootstrap-profile/: EXAMPLE-PROFILE.yaml
tasks/cross-machine-backend/: IMPLEMENTATION.md
tasks/desktop-notifications/: IMPLEMENTATION.md
tasks/khimaira-chat/: IMPLEMENTATION.md  PHASE-B-V1.6-VICE.md  PHASE-B-V2-ROLES-AUDIT.md  PHASE-B-VISION.md
tasks/khimaira-sync/: IMPLEMENTATION.md
tasks/khimaira-sync-pip-mode/: IMPLEMENTATION.md
tasks/linear-surfacing-hook/: IMPLEMENTATION.md
tasks/subagent-library/: IMPLEMENTATION.md
tasks/subagent-usage-hook/: IMPLEMENTATION.md
tasks/task-sources/: IMPLEMENTATION.md
tasks/workspaces/: IMPLEMENTATION.md
(+13 files in other folders)
