[project]
name = "chimera-workspace"
version = "0.0.0"
description = "chimera — AI dev framework (workspace root)"
requires-python = ">=3.12"
# Listing workspace members as dependencies is load-bearing: it makes
# `uv sync` (from the workspace root) install every member's entry-point
# script into .venv/bin/. Without this, a plain `uv sync` only resolves
# the root project's deps and drops member bins — most painfully,
# `.venv/bin/chimera` disappears, breaking the chimera MCP launcher and
# the bootstrap script's PATH-resolution layer. Use `tool.uv.sources`
# below to redirect each name to the workspace member rather than PyPI.
dependencies = [
    "chimera",
    "scarlet",
    "seance",
    "specter",
    "chimera-transport",
    "chimera-types",
]

[tool.uv.workspace]
members = ["packages/*", "shared/*"]

[tool.uv.sources]
chimera = { workspace = true }
scarlet = { workspace = true }
seance = { workspace = true }
specter = { workspace = true }
chimera-transport = { workspace = true }
chimera-types = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "shared/*/tests"]
